# reel-estate

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  pyrightconfig.json  slides.md  test_insta_upload.py  test_reel_upload.py
.claude/: hash.txt
assets/data/subway/: 국가철도공단_수도권2호선_역위치_20240624.csv  부산교통공사_도시철도역사정보_20210226.csv  서울교통공사_9호선 2_3단계 역사 좌표(위경도) 정보_20260131.csv  인천광역시 연수구_지하철역 현황_20250806.csv
compass/: checklist.md  context.md  plan.md
db/: database.py  models.py
docs/: brainstorming.excalidraw  possible_scenario.md  scenario.html  고민 top 100.md  아이디어.md  주요 링크.md
docs/compass/: checklist.md  context.md  plan.md
docs/superpowers/plans/: 2026-03-30-realestate-reels-pipeline.md
services/ai/: copy_writer.py  prompts.py  tts.py
services/instagram/: uploader.py
services/map/: geocoding.py  nearby.py  static_map.py  subway.py
services/map/subway/: __init__.py  finder.py  station_db.py
services/street/: playwright_shot.py
services/upload/: instagram.py
services/video/: renderer.py  templates.py
tests/ai/: test_copy_writer.py  test_tts.py
tests/db/: test_database.py
tests/map/: test_geocoding.py  test_nearby.py  test_static_map.py  test_subway.py
tests/street/: test_playwright_shot.py
tests/upload/: test_reel_upload.py
tests/video/: gen_slides.py
tts_server/: main.py  model.py
