[project]
name = "gen-for-smallbusiness"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.35.0",
    "moviepy>=1.0.3",
    "pillow>=10.0.0",
    "playwright>=1.44.0",
    "openai>=1.30.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "transformers>=5.4.0",
    "torch>=2.11.0",
    "scipy>=1.17.1",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "g2pk>=0.9.4",
    "uroman>=1.3.1.1",
]
